--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vscode-leetcode-problem-rating",
-    "displayName": "LeetCode",
+    "displayName": "LeetCode problem rating",
     "description": "为LeetCode题目难度进行打分。避免只有简单、中等、困难三种难度",
     "version": "1.0.0",
     "author": "ccagml",
