--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,16 @@
         "noImplicitReturns": true,
         "strictNullChecks": true,
         "noUnusedParameters": true,
-        "alwaysStrict": true
+        "alwaysStrict": true,
+        // Tells TypeScript to read JS files, as
+        // normally they are ignored as source files
+        "allowJs": true,
+        // Generate d.ts files
+        // "declaration": true,
+        // // This compiler run should
+        // // only output d.ts files
+        // "emitDeclarationOnly": true,
+        // "declarationMap": true
     },
     "exclude": [
         "node_modules",
