--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,15 @@ jobs:
         run: npm i -g vsce
 
       - name: VSCE Packge
-        run: vsce package
+        run: |
+          vsce package
+          VSIX_FILE=$(find ./ -name '*vscode-leetcode-problem-rating*.vsix')
+          echo "VSIX_FILE=$VSIX_FILE" >> $GITHUB_ENV
+          echo $VSIX_FILE
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.VSIX_FILE }}
+          path: ${{ env.VSIX_FILE }}
 
       - name: Publish
         run: vsce publish -p ${{ secrets.VSCE_PAT }}
