--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install Node.js modules
         run: npm install
 
+      - name: Update Node.js modules
+        run: npm update
+
       - name: Install vsce
         run: npm i -g vsce
 
@@ -51,6 +54,9 @@ jobs:
       - name: Install Node.js modules
         run: npm install
 
+      - name: Update Node.js modules
+        run: npm update
+
       - name: Install vsce
         run: npm i -g vsce
 
@@ -71,6 +77,9 @@ jobs:
 
       - name: Install Node.js modules
         run: npm install
+
+      - name: Update Node.js modules
+        run: npm update
 
       - name: Install vsce
         run: npm i -g vsce
