--- a/.github/workflows/auto_build.yml
+++ b/.github/workflows/auto_build.yml
@@ -2,9 +2,9 @@ name: auto_build
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev]
   pull_request:
-    branches: [main]
+    branches: [main, dev]
 
 jobs:
   linux:
