--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-leetcode-problem-rating",
     "displayName": "LeetCode problem rating",
     "description": "为LeetCode题目难度进行打分。避免只有简单、中等、困难三种难度",
-    "version": "1.0.8",
+    "version": "1.0.9",
     "author": "ccagml",
     "publisher": "ccagml",
     "license": "MIT",
@@ -737,8 +737,8 @@
         "tslint": "^5.20.1",
         "typescript": "^4.3.2",
         "chai": "4.2.0",
-        "eslint": "5.9.0",
-        "eslint-config-google": "0.11.0",
+        "eslint": "8.24.0",
+        "eslint-config-google": "0.14.0",
         "mocha": "^8.3.2",
         "nock": "10.0.2",
         "nyc": "^15.1.0",
@@ -749,11 +749,11 @@
         "fs-extra": "^10.0.0",
         "highlight.js": "^10.7.2",
         "lodash": "^4.17.21",
-        "markdown-it": "^8.4.2",
+        "markdown-it": "12.3.2",
         "require-from-string": "^2.0.2",
         "unescape-js": "^1.1.4",
         "ansi-styles": "3.2.1",
-        "cheerio": "0.20.0",
+        "cheerio": "1.0.0-rc.12",
         "he": "1.2.0",
         "mkdirp": "^1.0.4",
         "moment": "^2.29.1",
@@ -762,7 +762,7 @@
         "prompt": "^1.2.0",
         "request": "2.88.0",
         "supports-color": "5.5.0",
-        "underscore": "1.9.1",
+        "underscore": "1.12.1",
         "wordwrap": "1.0.0",
         "yargs": "^15.4.1"
     }
