--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-leetcode-problem-rating",
     "displayName": "LeetCode problem rating",
     "description": "为LeetCode题目难度进行打分。避免只有简单、中等、困难三种难度",
-    "version": "1.0.24",
+    "version": "1.1.1",
     "author": "ccagml",
     "publisher": "ccagml",
     "license": "MIT",
@@ -766,20 +766,12 @@
         "@types/fs-extra": "^9.0.11",
         "@types/lodash": "^4.14.170",
         "@types/markdown-it": "0.0.7",
-        "@types/mocha": "^2.2.42",
         "@types/node": "^14.14.33",
         "@types/require-from-string": "^1.2.0",
         "@types/vscode": "1.57.0",
         "tslint": "^5.20.1",
         "typescript": "^4.3.2",
-        "chai": "4.2.0",
-        "eslint": "8.24.0",
-        "eslint-config-google": "0.14.0",
-        "mocha": "^8.3.2",
-        "nock": "10.0.2",
-        "nyc": "^15.1.0",
-        "pkg": "^4.5.1",
-        "rewire": "4.0.1"
+        "chai": "4.2.0"
     },
     "dependencies": {
         "fs-extra": "^10.0.0",
@@ -797,9 +789,7 @@
         "ora": "3.0.0",
         "prompt": "^1.2.0",
         "request": "2.88.0",
-        "supports-color": "5.5.0",
         "underscore": "1.12.1",
-        "wordwrap": "1.0.0",
-        "yargs": "^15.4.1"
+        "wordwrap": "1.0.0"
     }
 }
