--- a/package.json
+++ b/package.json
@@ -769,11 +769,12 @@
         "@types/node": "^14.14.33",
         "@types/vscode": "1.57.0",
         "@typescript-eslint/eslint-plugin": "^5.42.1",
-        "@typescript-eslint/parser": "^5.42.1",
+        "@typescript-eslint/parser": "^5.43.0",
         "chai": "4.2.0",
         "eslint": "^8.27.0",
+        "prettier": "^2.7.1",
         "tslint": "^5.20.1",
-        "typescript": "^4.8.4"
+        "typescript": "^4.9.3"
     },
     "dependencies": {
         "ansi-styles": "3.2.1",
