update view name

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "onCommand:leetcode.submitSolution",
         "onCommand:leetcode.switchDefaultLanguage",
         "onCommand:leetcode.problems.sort",
-        "onView:leetCodeExplorer"
+        "onView:QuestionExplorer"
     ],
     "main": "./out/src/extension",
     "contributes": {
@@ -146,16 +146,16 @@
         "viewsContainers": {
             "activitybar": [
                 {
-                    "id": "leetcode",
-                    "title": "LeetCode",
+                    "id": "lcpr_bar",
+                    "title": "LCPR",
                     "icon": "resources/LeetCode.svg"
                 }
             ]
         },
         "views": {
-            "leetcode": [
+            "lcpr_bar": [
                 {
-                    "id": "leetCodeExplorer",
+                    "id": "QuestionExplorer",
                     "name": "Problems"
                 }
             ]
@@ -164,64 +164,64 @@
             "view/title": [
                 {
                     "command": "leetcode.toggleLeetCodeCn",
-                    "when": "view == leetCodeExplorer",
+                    "when": "view == QuestionExplorer",
                     "group": "navigation@0"
                 },
                 {
                     "command": "leetcode.signin",
-                    "when": "view == leetCodeExplorer",
+                    "when": "view == QuestionExplorer",
                     "group": "navigation@1"
                 },
                 {
                     "command": "leetcode.searchProblem",
-                    "when": "view == leetCodeExplorer",
+                    "when": "view == QuestionExplorer",
                     "group": "navigation@2"
                 },
                 {
                     "command": "leetcode.refreshExplorer",
-                    "when": "view == leetCodeExplorer",
+                    "when": "view == QuestionExplorer",
                     "group": "navigation@3"
                 },
                 {
                     "command": "leetcode.pickOne",
-                    "when": "view == leetCodeExplorer",
+                    "when": "view == QuestionExplorer",
                     "group": "overflow@0"
                 },
                 {
                     "command": "leetcode.problems.sort",
-                    "when": "view == leetCodeExplorer",
+                    "when": "view == QuestionExplorer",
                     "group": "overflow@1"
                 },
                 {
                     "command": "leetcode.deleteAllCache",
-                    "when": "view == leetCodeExplorer",
+                    "when": "view == QuestionExplorer",
                     "group": "overflow@2"
                 }
             ],
             "view/item/context": [
                 {
                     "command": "leetcode.previewProblem",
-                    "when": "view == leetCodeExplorer && viewItem =~ /problem*/",
+                    "when": "view == QuestionExplorer && viewItem =~ /problem*/",
                     "group": "leetcode@1"
                 },
                 {
                     "command": "leetcode.showProblem",
-                    "when": "view == leetCodeExplorer && viewItem =~ /problem*/",
+                    "when": "view == QuestionExplorer && viewItem =~ /problem*/",
                     "group": "leetcode@2"
                 },
                 {
                     "command": "leetcode.showSolution",
-                    "when": "view == leetCodeExplorer && viewItem =~ /problem*/",
+                    "when": "view == QuestionExplorer && viewItem =~ /problem*/",
                     "group": "leetcode@3"
                 },
                 {
                     "command": "leetcode.addFavorite",
-                    "when": "view == leetCodeExplorer && viewItem == problem",
+                    "when": "view == QuestionExplorer && viewItem == problem",
                     "group": "inline"
                 },
                 {
                     "command": "leetcode.removeFavorite",
-                    "when": "view == leetCodeExplorer && viewItem == problem-favorite",
+                    "when": "view == QuestionExplorer && viewItem == problem-favorite",
                     "group": "inline"
                 }
             ],
